--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+2012-10-12: GMediaRender 0.0.7dev (Henner Zeller)
+	- Support get duration and position of current stream.
+	- Support basic commands:
+	    o Pause
+	    o Seek
+	- When we're finished with the current track, we go back to STOPPED,
+	  so that controllers will send us the next song.
+	- Initial code to support SetNextAVTransportURI, but still have to find
+	  a controller that supports it :)
+
 2007-11-07: GMediaRender 0.0.6
 	- Escape evented variables in subscription response
 	- Various code cleanups
