--- a/README
+++ b/README
@@ -13,7 +13,7 @@ Copyright
 ---------
 
 GMediaRender is copyright (C) 2005-2007 Ivo Clarysse.
-
+Continuation of this project (C) 2012-2013 Henner Zeller.
 
 License
 -------
