--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+2013-...  Ongoing changes in git.
 2012-10-12: GMediaRender 0.0.7dev (Henner Zeller)
 	- Support get duration and position of current stream.
 	- Support basic commands:
