o update Authors with current maintainer.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,8 @@
 Author
 ======
 
-Ivo Clarysse - Main author
+Henner Zeller - Current maintainer (2012-..)
+Ivo Clarysse - original author (2005-2007)
 
 Contributors:
 -------------
