--- a/dist-scripts/debian/gmediarender.1
+++ b/dist-scripts/debian/gmediarender.1
@@ -30,8 +30,8 @@ command.
 .\" TeX users may be more comfortable with the \fB<whatever>\fP and
 .\" \fI<whatever>\fP escape sequences to invode bold face and italics,
 .\" respectively.
-\fBgmediarender\fP is a daemon which acts as a UPNP-AV renderer on the 
-local network.  It can be controlled from a UPNP-AV control point to 
+\fBgmediarender\fP is a daemon which acts as a UPNP-AV renderer on the
+local network.  It can be controlled from a UPNP-AV control point to
 play media files from a UPNP-AV media server through an audio device
 on the local system.
 .SH OPTIONS
@@ -46,47 +46,47 @@ Runs the program as a daemon.
 .B \-f, \-\-friendly\-name \fI\<name\>\fP
 Friendly name to advertise on the network.
 
-Usually, it is desirable for the renderer 
-to show up on controllers under a recognisable and unique name. This is 
+Usually, it is desirable for the renderer
+to show up on controllers under a recognisable and unique name. This is
 the option to set that name.
 .TP
-.B \-I, \-\-ip\-address \fI\<ip-address\>\fP
-The local IP address the service is running and advertised on.  
+.B \-I, \-\-interface\-name \fI\<interface-name\>\fP
+The local interface name the service is running and advertised on.
 
-This can 
-only be a single address, and must be explicitly specified (i.e. not 
+This can
+only be a single address, and must be explicitly specified (i.e. not
 0.0.0.0).
 .TP
 .B \-p, \-\-port \fI\<port>\fP
 Port to listen to. [49152..65535].
 
-\fBlibupnp\fP does not use SO_REUSEADDR, 
+\fBlibupnp\fP does not use SO_REUSEADDR,
 so it might be necessary to increment this number.
 .TP
-.B \-P, \-\-pid\-file \fI\<pidfile\>\fP                    
+.B \-P, \-\-pid\-file \fI\<pidfile\>\fP
 Name of the file which the process ID should be written to.
 .TP
 .B \-u, \-\-uuid \fI\<uuid>\fP
 UUID to advertise on the network in the form \fIuser:group\fP.
 
-This sets the UPNP UUID that is advertised and used by controllers to 
+This sets the UPNP UUID that is advertised and used by controllers to
 distinguish different renderers.
-Usually, \fBgmediarender\fP uses a built-in static id. 
-If there are multiple renderers running on the local network, they will all 
+Usually, \fBgmediarender\fP uses a built-in static id.
+If there are multiple renderers running on the local network, they will all
 share the same static ID.
 With this option, each renderer can be given its own id.
-One way to generate a UUID is to create a UUID once by running the 
+One way to generate a UUID is to create a UUID once by running the
 \fBuuidgen\fP tool.
 .TP
 .B \-\-mime-filter \fI\<filter>\fP
-Filters the advertised MIME types supported by the renderer. 
+Filters the advertised MIME types supported by the renderer.
 
-Normally, \fBgmediarender\fP advertises all MIME types (media formats) supported by the 
+Normally, \fBgmediarender\fP advertises all MIME types (media formats) supported by the
 output. Use this option to limit the advertised media support or add/remove
 support for a specific type.
 
 Filters take 3 forms. Multiple filters are separated by a comma.
- 
+
 \(bu Prefix filters will only advertise MIME types that match the supplied prefix. e.g. audio, video, image.
 
 \(bu Inclusion filters will add the supplied type to the supported list. e.g. +audio/x-flac
@@ -102,16 +102,16 @@ Set the audio sink.
 \fB\-\-gstout\-audiodevice\fP \fI\<device\>\fP
 Set the audio device.
 
-The \fB\-\-gstout\-audio\.\.\.\fP options allow the user to configure 
-where the sound output from 
-\fBgmediarender\fP is sent.  The correct values will depend on which 
-method of audio output (e.g. ALSA) is being used.  
+The \fB\-\-gstout\-audio\.\.\.\fP options allow the user to configure
+where the sound output from
+\fBgmediarender\fP is sent.  The correct values will depend on which
+method of audio output (e.g. ALSA) is being used.
 .TP
 .B \-\-gstout\-initial\-volume\-db \fI\<volume\>\fP
 Sets the initial volume on startup in decibels.
 
-Values range from 0 (maximum volume) to \-60 (minimum volume. The decibel 
-scale is non\-linear: \-20db represents roughly half volume.  The 
+Values range from 0 (maximum volume) to \-60 (minimum volume. The decibel
+scale is non\-linear: \-20db represents roughly half volume.  The
 default value is 0.
 
 Note that this does not
@@ -140,8 +140,8 @@ Dump Rendering Control service description XML and exit.
 \fB\-\-dump\-transport\-scpd\fR
 Dump A/V Transport service description XML and exit.
 .TP
-.B \-\-logfile \fI\<logfile\>\fP              
-Name of a file to log output of the program to.  
+.B \-\-logfile \fI\<logfile\>\fP
+Name of a file to log output of the program to.
 
 To log to the terminal use
 use \-\-logfile \/dev\/stdout
@@ -166,4 +166,3 @@ Show the program version.
 
 .SH SEE ALSO
 .BR uuidgen (1).
-
