--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+2021-01-21 Bump version number: GMediaRender 0.0.9
+	- More fine-grained mime filters
+	- Reduced memory in scan mime list
+	- A bunch of little cleanups.
+	- Use UpnpInit2() as the old has been dropped from
+	  libupnp (CVE-2020-12695)
+	  This means, there is no --ip-address anymore to bind, but
+	  --interface-name instead.
+
 2019-10-20 Bump version number: GMediaRender 0.0.8
 	- Various small changes over the last years.
 	- Now compiles with old and new libupnp (1.6.x and 1.8.x)
@@ -35,8 +44,8 @@
 		--dump-transport-scpd
 
 2007-11-05: GMediaRender 0.0.5
-	- BUG #16640: Rename inline 'min' function to avoid issues with 
-                      GCC 4.0.3 
+	- BUG #16640: Rename inline 'min' function to avoid issues with
+                      GCC 4.0.3
 	- BUG #17887: Update to gstreamer-0.10
                       Based on a patch contributed by David Siorpaes
 	- Fix compilation with libupnp-1.60, with largefile support
@@ -60,4 +69,3 @@
 
 2005-08-31: GMediaRender 0.0.1
 	- First preliminary release
-
