--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+2022-09-23 Bump version number: GMediaRender 0.1
 2021-01-21 Bump version number: GMediaRender 0.0.9
 	- More fine-grained mime filters
 	- Reduced memory in scan mime list
