Fix typo in manpage
Redo of #219 as there were merge conflicts.

Original autor: @pataquets

--- a/dist-scripts/debian/gmediarender.1
+++ b/dist-scripts/debian/gmediarender.1
@@ -140,7 +140,7 @@ Dump A/V Transport service description XML and exit.
 Name of a file to log output of the program to.  
 
 To log to the terminal use
-use \-\-logfile \/dev\/stdout
+use \-\-logfile /dev/stdout
 This file can get quite large over time, so it is only recommended to use
 this option for debugging purposes.
 .SS "Help options"
